# renpak

./: .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  README.md  install.sh  pyproject.toml  run_build.py  vercel.json
.github/workflows/: release.yml
crates/renpak-core/: Cargo.toml  build.rs
crates/renpak-core/src/: lib.rs  main.rs  pipeline.rs  rpa.rs  tui.rs
crates/renpak-core/tests/: test_rpa.rs
crates/renpak-rt/: Cargo.toml  build.rs
crates/renpak-rt/src/: lib.rs
python/renpak/: __init__.py  __main__.py  build.py  cli.py  encode.py  rpa.py
python/runtime/: renpak_init.rpy  renpak_loader.py
scripts/: analyze_lpips.py  analyze_rpa.py
tests/: test_avis.py  test_rpa.py
web/: install.ps1  install.sh
