[package]
name = "renpak-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "renpak"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1.1"
flate2 = "1.0"
regex = "1"

[build-dependencies]
pkg-config = "0.3"
